--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "bun ./scripts/build.ts"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "@types/bun": "^1.0.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
